vlib/v/checker/tests/inline_sum_type_return_type_too_many_variants.vv
import v.token

fn foo() int | string | token.Position | bool | u32 {
	return 1
}
